themes/v0/static/css/septr.css
@media (min-width: 980px) {
    /* Do not pad body when navbar is collapsed. */
    body {
        padding-top: 60px;
        padding-bottom: 40px;
    }

    /* Adjust anchor link positions to account for floated navbar. */
    section {
        padding-top: 60px;
        margin-top: -60px;
    }
}

@media (max-width: 980px) {
    /* Enable use of floated navbar text. */
    .navbar-text.pull-right {
        float: none;
        padding-left: 5px;
        padding-right: 5px;
    }
}

@media (max-width: 767px) {
    /* Throw the sidebar navigation list to the top when things get skinny. */
    .nav-list.affix {
        position: static;
        width: auto;
        top: 0;
    }
}

.navbar .brand {
    padding-top: 10px;
    font-weight: 800;
}

